Enable JPMS for all dependencies
Many dependencies doesn't support JPMS, so we are patching them with
jdeps. The patching process is automated using gradle.